[gd_scene load_steps=7 format=2]

[ext_resource path="res://Icons/PackageNotInstalled.png" type="Texture" id=1]
[ext_resource path="res://Icons/PackageInstalled.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SelectPackage.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.176471, 0.203922, 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.184314, 0.176471, 0.203922, 1 )

[node name="SelectPackage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
custom_styles/tab_fg = SubResource( 1 )

[node name="Mod Packages" type="Control" parent="MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Mod Packages"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 39.0
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="Instructions" type="Label" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/MarginContainer"]
margin_top = 4.0
margin_right = 1000.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "Create or select a package that will hold all of your edits to each of the game's levels.
Think of each package in this list as a self-contained game mod."
align = 1
autowrap = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer"]
margin_top = 43.0
margin_right = 1000.0
margin_bottom = 548.0
size_flags_vertical = 3
split_offset = 850
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackageListContainer" type="PanelContainer" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer"]
margin_right = 850.0
margin_bottom = 505.0
custom_styles/panel = SubResource( 2 )

[node name="PackageList" type="ItemList" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/PackageListContainer"]
margin_right = 850.0
margin_bottom = 505.0
size_flags_horizontal = 3
items = [ "Test", ExtResource( 2 ), false, "Item 1", ExtResource( 1 ), false, "Item 2", ExtResource( 1 ), false ]

[node name="ProjectActions" type="VBoxContainer" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer"]
margin_left = 862.0
margin_right = 1000.0
margin_bottom = 505.0

[node name="EditButton" type="Button" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions"]
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstallButton" type="Button" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions"]
visible = false
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Install"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions"]
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions"]
margin_top = 48.0
margin_right = 138.0
margin_bottom = 56.0
custom_constants/margin_top = 2
custom_constants/margin_bottom = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions/MarginContainer"]
margin_top = 2.0
margin_right = 138.0
margin_bottom = 6.0
custom_styles/separator = SubResource( 3 )

[node name="NewPackageButton" type="Button" parent="MarginContainer/TabContainer/Mod Packages/VBoxContainer/HSplitContainer/ProjectActions"]
margin_top = 60.0
margin_right = 138.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "New Package"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewPackageDialog" type="WindowDialog" parent="."]
margin_left = 260.26
margin_top = 193.892
margin_right = 717.26
margin_bottom = 465.892
size_flags_vertical = 9
window_title = "New Package"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NewPackageDialog"]
anchor_right = 1.0
margin_bottom = 90.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewPackageDialog/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 449.0
margin_bottom = 82.0
size_flags_vertical = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewPackageDialog/MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 14.0
text = "Give the package a name:"

[node name="NewPackageNameEdit" type="LineEdit" parent="NewPackageDialog/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 440.0
margin_bottom = 42.0

[node name="MarginContainer" type="MarginContainer" parent="NewPackageDialog/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 440.0
margin_bottom = 74.0
custom_constants/margin_top = 8

[node name="CenterContainer" type="CenterContainer" parent="NewPackageDialog/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 8.0
margin_right = 440.0
margin_bottom = 28.0

[node name="CreatePackageButton" type="Button" parent="NewPackageDialog/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 166.0
margin_right = 274.0
margin_bottom = 20.0
text = "Create Package"

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
margin_left = 376.11
margin_top = 274.401
margin_right = 576.11
margin_bottom = 344.401
dialog_text = "Are you sure you want to delete?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Error!"
